--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -38,6 +38,7 @@
 	}
 
 	:where(fieldset) {
+		min-inline-size: 0;
 		border: none;
 	}
 
